# FmoDeck

./: .dockerignore  .env.legacy  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.legacy.config.cjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  websocketApi.md
.github/workflows/: ci.yml  tauri-android-legacy.yml  tauri-android.yml  tauri-release.yml
docker/: nginx.conf.template
public/: manifest.webmanifest  sw.js
scripts/: android-file-paths.xml  android-main-activity.kt.tpl  android-manifest-patch.sh  android-patch-themes.py  android-signing-inject.sh  android-signing-setup.sh  build-latest-json.sh  extract-changelog.sh  probe-reqid.mjs  smoke-fmo-api.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.legacy.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: routes.tsx
src/hooks/: useAutoReconnect.ts  useFmoAudio.ts  useFmoSync.test.ts  useFmoSync.ts  useHudStyles.ts  useLogsSync.test.ts  useLogsSync.ts  useSelfInfo.ts  useSpeakingEvents.ts  useStationPolling.ts  useStationSync.test.ts  useStationSync.ts  useSyncPolicy.test.ts  useSyncPolicy.ts  useUpdateCheck.ts
src/i18n/: index.ts
src/lib/: notifications.ts  utils.test.ts
src/stores/: connection.test.ts  connection.ts  self.test.ts  self.ts  settings.test.ts  settings.ts
src/styles/: globals.css  legacy-fallbacks.css  legacy.css
src/types/: fmo-protocol.ts  message.ts  qso.ts  sstv.ts  station.ts
tests/: app.test.tsx  decode-real-sstv.test.ts  live-analyser-sim.test.ts  probe-sstv-wav.test.ts  setup.ts
(+232 files in other folders)
