[package]
name = "fmodeck"
version = "0.1.3"
description = "FmoDeck desktop app — amateur radio FMO console"
authors = ["wh0am1i"]
license = "MIT"
repository = "https://github.com/wh0am1i/FmoDeck"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fmodeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
