[package]
name = "fmodeck"
version = "0.1.7"
description = "FmoDeck desktop app — amateur radio FMO console"
authors = ["wh0am1i"]
license = "MIT"
repository = "https://github.com/wh0am1i/FmoDeck"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fmodeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

# Release：体积优先（desktop / Android release 都走这个 profile）
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# Debug：Android debug APK 默认保留全部 debug symbols，体积会膨胀到几百 MB；
# 去掉 debug symbols + 基础优化后单 ABI APK ≈ 30-40MB
[profile.dev]
strip = "debuginfo"
opt-level = 1
